# dllpatch

./: CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  dllpatch.cpp  run-demo.bat
demo/: CMakeLists.txt  demo.cpp  dll_class.cpp  dll_class.hpp
